--- a/Kiba/KBAChooseAccountTableContr.xib
+++ b/Kiba/KBAChooseAccountTableContr.xib
@@ -4,21 +4,19 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KBAChooseDailyAccountContr">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="KBAChooseAccountTableContr">
             <connections>
-                <outlet property="chooseAccTableContr" destination="aYy-H8-0AA" id="Ohe-X2-2Lb"/>
-                <outlet property="view" destination="NF1-RQ-GKM" id="iFD-mK-uJb"/>
+                <outlet property="view" destination="NF1-RQ-GKM" id="xz0-SW-jxx"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <customObject id="aYy-H8-0AA" customClass="KBATableChooseDailyAccContr"/>
         <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="NF1-RQ-GKM">
             <rect key="frame" x="0.0" y="0.0" width="365" height="384"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <color key="backgroundColor" red="0.71968670280000002" green="0.71968670280000002" blue="0.71968670280000002" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
-                <outlet property="dataSource" destination="aYy-H8-0AA" id="glM-Dc-kGf"/>
-                <outlet property="delegate" destination="aYy-H8-0AA" id="5Xe-cp-0kX"/>
+                <outlet property="dataSource" destination="-1" id="XV4-fz-vh4"/>
+                <outlet property="delegate" destination="-1" id="xV3-j2-7TU"/>
             </connections>
         </tableView>
     </objects>
