--- a/Kiba/View/SelfService/KBAStatemContr.xib
+++ b/Kiba/View/SelfService/KBAStatemContr.xib
@@ -14,9 +14,13 @@
             <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="bcC-yF-hXO">
-                    <rect key="frame" x="568" y="434" width="353" height="216"/>
+                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="bcC-yF-hXO">
+                    <rect key="frame" x="523" y="434" width="234" height="216"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="216" id="Kur-le-3tr"/>
+                        <constraint firstAttribute="width" constant="234" id="NYM-Zi-o7t"/>
+                    </constraints>
                     <date key="date" timeIntervalSinceReferenceDate="407754855.69300002">
                         <!--2013-12-03 09:14:15 +0000-->
                     </date>
@@ -42,9 +46,13 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
 </data>
                     </timeZone>
                 </datePicker>
-                <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="vMC-rf-PCw">
-                    <rect key="frame" x="568" y="126" width="353" height="216"/>
+                <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="vMC-rf-PCw">
+                    <rect key="frame" x="523" y="126" width="234" height="216"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="216" id="bhw-ya-pEv"/>
+                        <constraint firstAttribute="width" constant="234" id="tdy-wn-494"/>
+                    </constraints>
                     <date key="date" timeIntervalSinceReferenceDate="407754855.69300002">
                         <!--2013-12-03 09:14:15 +0000-->
                     </date>
@@ -70,32 +78,35 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
 </data>
                     </timeZone>
                 </datePicker>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Ende" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qbL-8i-xnJ">
-                    <rect key="frame" x="568" y="405" width="40" height="21"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ende" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qbL-8i-xnJ">
+                    <rect key="frame" x="523" y="405" width="40" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Anfang" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6m-df-3Jf">
-                    <rect key="frame" x="566" y="97" width="55" height="21"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anfang" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U6m-df-3Jf">
+                    <rect key="frame" x="521" y="97" width="55" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDL-AZ-iFd">
-                    <rect key="frame" x="799" y="688" width="122" height="51"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDL-AZ-iFd">
+                    <rect key="frame" x="370" y="658" width="78" height="38"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
                     <state key="normal" title="Drucken">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kLE-fq-hMF">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="kLE-fq-hMF">
                     <rect key="frame" x="36" y="126" width="412" height="524"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="width" priority="529" constant="412" id="mZw-yi-WXL"/>
+                    </constraints>
                 </tableView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Kontoaktivitäten" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uqg-rL-DGY">
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kontoaktivitäten" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uqg-rL-DGY">
                     <rect key="frame" x="36" y="97" width="125" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -103,6 +114,25 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 </label>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="bcC-yF-hXO" firstAttribute="top" secondItem="qbL-8i-xnJ" secondAttribute="bottom" constant="8" id="0Db-iL-EQD"/>
+                <constraint firstItem="kLE-fq-hMF" firstAttribute="top" secondItem="Uqg-rL-DGY" secondAttribute="bottom" constant="8" id="0ic-EN-6Nz"/>
+                <constraint firstItem="vMC-rf-PCw" firstAttribute="leading" secondItem="U6m-df-3Jf" secondAttribute="leading" constant="2" id="3fs-DA-9iN"/>
+                <constraint firstItem="Uqg-rL-DGY" firstAttribute="top" secondItem="2" secondAttribute="top" constant="97" id="4ja-9B-eJ3"/>
+                <constraint firstItem="vMC-rf-PCw" firstAttribute="leading" secondItem="kLE-fq-hMF" secondAttribute="trailing" constant="75" id="84I-UC-Cag"/>
+                <constraint firstItem="kLE-fq-hMF" firstAttribute="top" secondItem="vMC-rf-PCw" secondAttribute="top" id="9ix-Jx-z0M"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vMC-rf-PCw" secondAttribute="trailing" constant="50" id="IyB-TN-Qfp"/>
+                <constraint firstItem="bcC-yF-hXO" firstAttribute="trailing" secondItem="vMC-rf-PCw" secondAttribute="trailing" id="OcP-Uc-M1K"/>
+                <constraint firstItem="kLE-fq-hMF" firstAttribute="trailing" secondItem="TDL-AZ-iFd" secondAttribute="trailing" id="VfW-bE-5rT"/>
+                <constraint firstItem="vMC-rf-PCw" firstAttribute="top" secondItem="U6m-df-3Jf" secondAttribute="bottom" constant="8" id="eLK-fY-HGh"/>
+                <constraint firstItem="kLE-fq-hMF" firstAttribute="leading" secondItem="Uqg-rL-DGY" secondAttribute="leading" id="fa2-fu-UJs"/>
+                <constraint firstItem="Uqg-rL-DGY" firstAttribute="top" secondItem="U6m-df-3Jf" secondAttribute="top" id="ghD-fh-tkJ"/>
+                <constraint firstItem="qbL-8i-xnJ" firstAttribute="leading" secondItem="bcC-yF-hXO" secondAttribute="leading" id="hjd-9f-Yvb"/>
+                <constraint firstItem="qbL-8i-xnJ" firstAttribute="top" secondItem="vMC-rf-PCw" secondAttribute="bottom" constant="63" id="izv-Ta-FhY"/>
+                <constraint firstItem="kLE-fq-hMF" firstAttribute="bottom" secondItem="bcC-yF-hXO" secondAttribute="bottom" id="ko9-M0-hF5"/>
+                <constraint firstItem="TDL-AZ-iFd" firstAttribute="top" secondItem="kLE-fq-hMF" secondAttribute="bottom" constant="8" id="wiU-OB-Av8"/>
+                <constraint firstItem="Uqg-rL-DGY" firstAttribute="leading" secondItem="2" secondAttribute="leading" constant="36" id="z7Z-qp-TpE"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
         </view>
